# django

./: .gitignore  README.md
01_templates/: .env.example  Pipfile  README.md  package.json  requirements.txt  tailwind.config.js
02_templates_v2/: pnpm-lock.yaml
A_django_intro/: README.md  manage.py  package-lock.json  package.json  tailwind.config.js
B_django_ORM/: Pipfile  README.md  manage.py  package.json  pnpm-lock.yaml
F_restapi_basic/: Pipfile  README.md  hello.py  pyproject.toml  tailwind.config.js
F_restapi_basic/account/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
F_restapi_basic/account/migrations/: 0001_initial.py
F_restapi_basic/api/: admin.py  models.py  serializers.py  urls.py  views.py
F_restapi_basic/api/migrations/: 0001_initial.py  0002_alter_product_category_alter_review_product.py
F_restapi_basic/config/: settings.py  urls.py  utils.py
F_restapi_basic/core/: settings.py  urls.py
F_restapi_basic/orm/: admin.py  api_views.py  apps.py  filters.py  models.py  serializers.py  urls.py
F_restapi_basic/orm/migrations/: 0001_initial.py
F_restapi_basic/orm/scripts/: seed.py
F_restapi_basic/static/src/: output.css
F_restapi_basic/templates/: _base.html
F_restapi_basic/templates/registration/: login.html
F_restapi_basic/testapi/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
F_restapi_basic/testapi/migrations/: 0001_initial.py  0002_child_parent.py  0003_tag_product_tags.py  0004_alter_product_tags.py
F_restapi_basic/users/: urls.py
F_restapi_basic/users/api/: views.py
(+315 files in other folders)
